<resources>

    <string name="cached_file_provider_authority">cecc.android.mechdeficiency</string>
    
    <string name="app_name">Mechanical\nDeficiency Test</string>
    <string name="app_email">ceccsolutions@gmail.com</string>

    <string name="email_body_signed_form">There is a signed form attached for interested parties.  Any concerns as to the validity of this document should be reported at once.</string>
    
    <string name="email_subject_feedback">Mechanical Deficiency Utility Feedback</string>
    <string name="email_body_feedback">Let us know what you think!</string>
    
    <string name="email_subject_export">Mechanical Deficiency Export</string>
    <string name="email_body_export">Attached is a ZIP file with database and all images</string>
    
    <string name="popup_msg_signing_important">Be aware that all signatures captured here must be emailed in order to be preserved.  All Signatures will be discarded once leaving this page.  This is done to prevent mis use and ensure that the signatures gathered here will never be re-used.  Please make sure all parties signing this form are included as recipients on the final email.</string>
    <string name="popup_msg_billing_err_general">An error occurred.  Please try you request again or contact support</string>
    <string name="popup_msg_billing_err_argument">Google billing returned error code %s Please contact support for more information</string>

    <string name="popup_msg_premium_feature_locked">This premium feature is locked.\n\n
        Premium Features Include:\n
        - Unlimited forms\n
        - Email signed forms\n
        - Export Database\n
        - Three image captures\n
        - Higher resolution images\n
        - Image date and time stamped\n\n
        Would you like to unlock all features?
    </string>
    
    <string name="popup_msg_subscription_activiated">Your susbscription is activated. Premium features will be unlocked until %s.  You will have the option to unlock permanently at a reduced price if you do so before the subscription expires.</string>
    <string name="popup_msg_premium_permanently_unlocked">Congratulations!  All features have been permanantly unlocked.</string>
    <string name="popup_msg_subs_expired">Your subscription has expired.  Would you like to re-activate it?</string>
    <string name="popup_msg_no_purchases">There are no purchase items at this point.  Please try again when you subscription expires or conteact support.</string>
    <string name="popup_msg_empty_purchases">You do not have any recorded purchases.</string>
    <string name="popup_msg_operation_not_supported">Operation not supported on this device.</string>
    <string name="popup_msg_are_you_sure">Are you Sure?</string>
    <string name="popup_msg_processing_email">Please wait while we generate the image for email</string>
    <string name="popup_msg_welcome">Thank you for downloading the Mechanical Deficiency Report Tool.  If you have already purchased the premium features then click \'Restore\'.  Otherwise you can try the basic features for as long as you like.  Later on if you want to try the premium features by subscription or permanantly, then choose \'Upgrade\'</string>
    <string name="popup_msg_about">Mechanical Deficiency Report Tool\n\nCECC Solutions\n\n%1$s\nApplication Version: %2$s\n\nGoogle Play Version: %3$s</string>
    <string name="popup_msg_nuke">Are you sure?  This will delete all application data.</string>
    <string name="popup_msg_dbexport_error">Problem exporting database %s</string>
    
    <string name="popup_button_ok">OK</string>
    <string name="popup_button_not_now">Not Now</string>
    <string name="popup_button_purchase_options">Purchase Options</string>
    <string name="popup_button_cancel">Cancel</string>
    <string name="popup_button_change">Change</string>
    <string name="popup_button_remove">Remove</string>
    <string name="popup_button_iunderstand">I Understand</string>
    <string name="popup_button_delete">Delete</string>
    <string name="popup_button_restore">Restore Purchase</string>
    <string name="popup_button_reset">Reset</string>
    <string name="popup_button_eula_accept">Accept</string>
    <string name="popup_button_eula_decline">Decline</string>
    <string name="popup_button_new">New</string>
    <string name="popup_button_view_eula">View EULA</string>
    
    <string name="popup_title_error">Error</string>
    <string name="popup_title_premium_upgrade">Premium Upgrade</string>
    <string name="popup_title_subs_expired">Subscription Expired</string>
    <string name="popup_title_purchase_complete">Purchase Complete</string>
    <string name="popup_title_purchase_options">Purchase Options</string>
    <string name="popup_title_purchases">Purchases</string>
    <string name="popup_title_how_esign_works">How eSigning Works</string>
    <string name="popup_title_important">Important</string>
    <string name="popup_title_confirm">Confirm</string>
    <string name="popup_title_processing">Processing</string>
    <string name="popup_title_welcome">Welcome!</string>
    <string name="popup_title_options">Options</string>
    <string name="popup_title_about">About</string>
    <string name="popup_title_choose_type">Choose Type</string>
    <string name="popup_title_new_type">New Type</string>
    <string name="popup_title_eula">End User License Agreement</string>
    
    <string-array name="form_item_options">
        <item>Edit</item>
        <item>Duplicate</item>
        <item>Delete</item>
        <item>Sign and Email</item>
    </string-array>
    
    <string-array name="form_list_options_debug">
        <item>About</item>
        <item>Send Feedback</item>
        <item>Export ZIP</item>
        <item>Nuke</item>
        <item>Purchases</item>
        <item>Upgrade</item>
        <item>Purchases DEBUG</item>
        <item>Purchases Refresh</item>
    </string-array>
    
    <string-array name="form_list_options_subscription">
        <item>About</item>
        <item>Send Feedback</item>
        <item>Export ZIP</item>
        <item>Nuke</item>
        <item>Purchases</item>
        <item>Upgrade</item>
    </string-array>

    <string-array name="form_list_options_unlocked">
        <item>About</item>
        <item>Send Feedback</item>
        <item>Export ZIP</item>
        <item>Nuke</item>
        <item>Purchases</item>
    </string-array>
    
    <string name="tvSubscriptionExpiresIn">Subscription expires in %s</string>
    
    <string name="et_hint_type_and_sign">Type Full Name here and Sign Below</string>
    <string name="button_accept">Accept</string>
    <string name="button_restart">Restart</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="et_hint_customer">Customer</string>
    <string name="et_hint_location">Location</string>
    <string name="et_hint_project">Project</string>
    <string name="et_hint_representative">Representative</string>
    <string name="et_hint_system">System</string>
    <string name="et_hint_plan">Plan/Spec</string>
    <string name="et_hint_custom">Custom</string>
    <string name="rb_mechanical">Mechanical</string>
    <string name="rb_plumbing">Plumbing</string>
    <string name="rb_process">Process</string>
    <string name="rb_custom">Custom</string>
    <string name="cb_fix">Needs Fix</string>
    <string name="cb_fixed">Fix Done</string>
    <string name="tv_hint_meta">Details</string>
    <string name="et_hint_comments">Comments</string>
    <string name="tv_date">Date</string>
    <string name="tv_customer">Customer</string>
    <string name="tv_project">Project</string>
    <string name="tv_reports">Reports</string>
    <string name="button_new_cert">New Certification</string>
    <string name="button_options">Options</string>
    <string name="sbutton_date">Date</string>
    <string name="sbutton_project">Project</string>
    <string name="sbutton_customer">Customer</string>
    <string name="sbutton_fix">Fix\nNeeded</string>
    <string name="sbutton_fixed">Fix\nDone</string>
    <string name="tv_empty_list">You dont have any Forms!\n\nPlease choose \'New Certification\' to start a new form.</string>
    <string name="row_description">DESCRIPTION</string>
    <string name="row_buy">BUY</string>
    <string name="row_sku">SKU</string>
    <string name="row_orderid">ORDER ID</string>
    <string name="row_date">DATE</string>
    <string name="row_state">STATE</string>
    <string name="tv_fullname">Full Name</string>
    <string name="label_ambient_temp">Ambient Temperature %d&#176; F."</string>
    
    <string name="splash_tv_ptuheader">Mechanical Deficiency\nReport</string>
    <string name="splash_tv_ptumiddle">CECC Solutions</string>
    <string name="splash_tv_ptufooter">Patent Pending</string>
    
    <string name="buttonAddsignature">Add Signature</string>
    <string name="buttonHowESignWorks">How eSigning Works</string>
    <string name="buttonEmail">Email</string>
    <string name="labelPTC">Mechanical Deficiency Report</string>
    <string name="labelCustomer">Customer:</string>
    <string name="labelLocation">Location:</string>
    <string name="labelProject">Project:</string>
    <string name="labelRep">Representative:</string>
    <string name="labelSystem">System:</string>
    <string name="labelPlan">Plan/Spec:</string>
    <string name="labelSpec">Spec:</string>
    <string name="labelType">System Type:</string>
    <string name="labelComments">Comments</string>
    <string name="labelSignatures">Signatures</string>
    
    <string name="hintEmpty">empty</string>
    <string name="labelNeedsFixYes">Needs Fix:YES</string>
    <string name="labelNeedsFixNo">Needs Fix:NO</string>
    <string name="labelFixDoneYes">Fix complete:YES</string>
    <string name="labelFixDoneNo">Fix complete:NO</string>
    
    <string name="emailSubjectSignedPTCform">Signed PTC Form</string>
    <string name="labelImageMeta">Image Meta Data</string>
    
    <string name="tvFormsignCertifiedOn">Certified on: %s</string>
    
    <plurals name="plural_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="plural_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    
    <plurals name="plural_mins">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    
    <string-array name="popup_items_choose_type">
        <item>Plumbing</item>
        <item>Mechanical</item>
        <item>Electrical</item>
        <item>Controls</item>
        <item>Street</item>
    </string-array>
</resources>
