<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/tablerow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvPurchaseSku"
        style="@style/rowitem"
        android:layout_weight="2"
        android:text="@string/row_sku" />

    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@android:color/white" />
    
    <TextView
        android:id="@+id/tvPurchaseId"
        style="@style/rowitem"
        android:layout_weight="3"
        android:text="@string/row_orderid" />

    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@android:color/white" />

    <TextView style="@style/rowitem"
        android:id="@+id/tvPurchaseDate"
        android:layout_weight="2"
        android:text="@string/row_date" />
    
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@android:color/white" />

    <TextView style="@style/rowitem" 
        android:id="@+id/tvPurchaseState"
        android:layout_weight="2"
        android:text="@string/row_state"/>
    
</TableRow>
