<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            style="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_reports" />

        <TextView
            android:id="@+id/tvAmbient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp" />

    </RelativeLayout>

    <LinearLayout android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    <Button
	        style="@style/button"
	        android:id="@+id/buttonNewForm"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/button_new_cert" />

        <Button
            style="@style/button"
            android:id="@+id/buttonOptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_options" />
	    
        
    </LinearLayout>

    
    <cc.lib.android.SortButtonGroup
        android:id="@+id/sortButtonGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal" >

        <cc.lib.android.SortButton
            style="@style/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/sbutton_date"
            app:sortField="EDIT_DATE" />

        <cc.lib.android.SortButton
            style="@style/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sbutton_customer"
            app:sortAscending="false"
            app:sortField="CUSTOMER" />

        <cc.lib.android.SortButton
            style="@style/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/sbutton_project"
            app:sortAscending="false"
            app:sortField="PROJECT" />
        
        <cc.lib.android.SortButton
            style="@style/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sbutton_fix"
            app:sortField="FIX" />

        <cc.lib.android.SortButton
            style="@style/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sbutton_fixed"
            app:sortField="FIXED" />
        
    </cc.lib.android.SortButtonGroup>
    
    <ListView
        android:id="@+id/formList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/sortButtonGroup"
        android:layout_marginTop="10dp" />
    
    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/sortButtonGroup"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/tv_empty_list"
        android:textSize="20sp" />
    
</RelativeLayout>
