<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_rect"
    android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:text="@string/tv_date" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_customer" />
        
        <TextView
            android:id="@+id/tvProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_project" />


    </LinearLayout>
        
    <CheckBox
        android:id="@+id/cbFix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:clickable="false" />

    <CheckBox
        android:id="@+id/cbFixed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:clickable="false" />
    
</LinearLayout>

